Finish the first configuration for executing the experiment